调整代码适配JDK1.8，改为1.8编译