@@ -15,6 +15,6 @@ public class StringUtils
      */
     public static boolean isBlank(String string)
     {
-        return (string == null || string.trim().isBlank());
+        return (string == null || !string.trim().isEmpty());
     }
 }
